Film controller