@@ -1,33 +1,46 @@
 package com.example.domains.entities.dtos;
 
-import java.io.Serializable;
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import com.example.domains.entities.Actor;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Pattern;
+import jakarta.validation.constraints.Size;
+
 import com.example.domains.entities.Film;
+import com.example.domains.entities.Language;
+import com.fasterxml.jackson.annotation.JsonFormat;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
-@SuppressWarnings("serial")
-@Data @AllArgsConstructor
-public class FilmDTO implements Serializable {
+@Data @AllArgsConstructor @NoArgsConstructor
+public class FilmDTO {
 	private int filmId;
 	private String description;
 	private Integer length;
 	private String rating;
 	private Short releaseYear;
+	@NotNull
 	private Byte rentalDuration;
+	@NotNull
 	private BigDecimal rentalRate;
+	@NotNull
 	private BigDecimal replacementCost;
+	@NotBlank
+	@Size(min=2, max = 128)
 	private String title;
-	private String language;
-	private String languageVO;
-	private List<String> actors;
-	private List<String> categories;
-	
-	public static FilmDTO from(Film source) {
+	@NotNull
+	private Integer languageId;
+	private Integer languageVOId;
+	private List<Integer> actors = new ArrayList<Integer>();
+	private List<Integer> categories = new ArrayList<Integer>();
+
+ 	public static FilmDTO from(Film source) {
 		return new FilmDTO(
 				source.getFilmId(), 
 				source.getDescription(),
@@ -38,14 +51,31 @@ public class FilmDTO implements Serializable {
 				source.getRentalRate(),
 				source.getReplacementCost(),
 				source.getTitle(),
-				source.getLanguage() == null ? null : source.getLanguage().getName(),
-				source.getLanguageVO() == null ? null : source.getLanguageVO().getName(),
-				source.getActors().stream().map(item -> item.getFirstName() + " " + item.getLastName())
-					.sorted().toList(),
-				source.getCategories().stream().map(item -> item.getName()).sorted().toList()
+				source.getLanguage() == null ? null : source.getLanguage().getLanguageId(),
+				source.getLanguageVO() == null ? null : source.getLanguageVO().getLanguageId(),
+				source.getActors().stream().map(item -> item.getActorId())
+					.collect(Collectors.toList()),
+				source.getCategories().stream().map(item -> item.getCategoryId())
+					.collect(Collectors.toList())
 				);
 	}
-	
-	
+	public static Film from(FilmDTO source) {
+		Film rslt = new Film(
+				source.getFilmId(), 
+				source.getTitle(),
+				source.getDescription(),
+				source.getReleaseYear(),
+				source.getLanguageId() == null ? null : new Language(source.getLanguageId()),
+				source.getLanguageVOId() == null ? null : new Language(source.getLanguageVOId()),
+				source.getRentalDuration(),
+				source.getRentalRate(),
+				source.getLength(),
+				source.getReplacementCost(),
+				source.getRating() == null ? null : source.getRating()
+				);
+		source.getActors().stream().forEach(item -> rslt.addActor(item));
+		source.getCategories().stream().forEach(item -> rslt.addCategory(item));
+		return rslt;
+	}
 
 }
